Mejora en metodo cargar imagen